# Pratical-Exercise

./: README.md  README.org  two_layer_net.py
CS373-Artifical Intelligence for Robotics/: A-Start.py  ExpansionGrid.py  FirstSearchProgram.py  KalmanFilter-1d.py  KalmanFilter-4d.py  LocalizationProgram.py  MovingRobot.py  OptimumPolicy.py  StochasticMotion.py  ValueProgram.py  car-move.py  localization.py
CS373-Artifical_Intelligence_for_Robotics/: LeftTurnPolicy.py  PrintPath.py  car-ParticalFilter.py  car-sense.py  kalmanFilter-2d.py
ComputerVison/: 01-Image_Read_Show.ipynb  02-Image_Write.ipynb  03-Image_Quality.ipynb  04-Pixel_Read_Write.ipynb  12-image-resize.py  13-nearest_interpolation.py  14-ImageCrop.py  15-ImageShift.py  16-ImageShiftPixel.py  17-ImageFlip.py  AffineTransform.py  BGR2Gray_Pixel.py  BGR2Gray_imread.py  Brightness_Enhancement.py  Canny_EdgeDetection.py  Change_Color_Style.py  Color_Invert_ColorImage.py  Color_Invert_GrayImage.py  DrawImage.py  Embossing.py  Frosted_Glass.py  Gaussian_ filtering.py  Histogram_Color_CV.py  Histogram_Equalization_Color.py  Histogram_Equalization_Color_Algo.py  Histogram_Equalization_Color_Algorithm.py  Histogram_Equalization_Gray_CV.py  Histogram_Equalization_Grayscale_algorithm.py  Histogram_Equalization_YUV_CV.py  Histogram_Gray_Algorithm.py  Image_Fusion.py  Image_Repaire.py  Mean_Filtering.py  Mosaic.py  (+10 more)
ComputerVison/CameraCalibration/: CMakeLists.txt  OpenCV_MonoCamera_Calibration.cpp
ComputerVison/FeatureMatching/: CMakeLists.txt
ComputerVison/FeatureMatching/src/: FeatureMatching.cpp  test.cpp
(+59 files in other folders)
